<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Únete</string>
    <string name="toolbar_title_createaccount">Create Cuenta</string>
    <string name="username_card">David Gómez</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likenumbercard_card">10 Me Gusta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_profile">Yo</string>
    <string name="tab_home">Home</string>
    <string name="secondword_detail">Me Gusta</string>
    <string name="titleimage">\"Todo copas en la playa\"</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="transitionname_picture">trasitionnamepicture</string>
    <string name="hint_title">Titulo</string>
    <string name="hint_description">Descripción</string>
    <string name="text_button_createpost">Crear Post</string>

    <string name="facebook_app_id">556189441728951</string>
    <string name="fb_login_protocol_scheme">fb556189441728951</string>

</resources>