<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.CreateAccountActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margincreateaccount"
                style="@style/EditTextBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/editTextColorBlack"
                    android:hint="@string/hint_email"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margincreateaccount"
                style="@style/EditTextBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/editTextColorBlack"
                    android:hint="@string/hint_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margincreateaccount"
                style="@style/EditTextBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/editTextColorBlack"
                    android:hint="@string/hint_user"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margincreateaccount"
                style="@style/EditTextBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietPassword_Createaccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/editTextColorBlack"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margincreateaccount"
                style="@style/EditTextBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/editTextColorBlack"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnJoinUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/colorPrimaryDark"
                app:rippleColor="@color/colorPrimary"
                android:text="@string/text_button_createaccount"/>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>