<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".post.view.NewPostActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:scaleType="centerCrop"
            android:background="@color/backgroundtext_card"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_marginTop="@dimen/edittext_margincreateaccount"
            style="@style/EditTextBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/editTextColorBlack"
                android:hint="@string/hint_title"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_marginTop="@dimen/edittext_margincreateaccount"
            style="@style/EditTextBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/editTextColorBlack"
                android:hint="@string/hint_description"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreatePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorPrimaryDark"
            app:rippleColor="@color/colorPrimary"
            android:text="@string/text_button_createpost"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>