<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:padding="16dp">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/platzigram"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/editTextColorWhite"
                        android:hint="@string/hint_username"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    style="@style/EditTextWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:textColor="@color/editTextColorWhite"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:rippleColor="@color/colorPrimary"
                    android:text="@string/text_button_login"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvDontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/dont_have_account"
                        android:textColor="@color/editTextColorWhite"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_create_here"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:letterSpacing="0"
                        android:text="@string/create_here"
                        android:textAllCaps="false"
                        android:textColor="@color/editTextColorWhite"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:textStyle="bold"
                        android:layout_toRightOf="@+id/tvDontHaveAccount"
                        app:rippleColor="@color/editTextColorWhite" />

                    <ProgressBar
                        android:id="@+id/pbLogin"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                </RelativeLayout>
            </LinearLayout>

        </ScrollView>



    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>