<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PictureDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ablPicture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbarlayout_heigtgh"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctlPicture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">

            <ImageView
                android:id="@+id/ivHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/image"
                app:layout_collapseMode="parallax"
                android:transitionName="@string/transitionname_picture"/>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tvUsernameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_username_detail"
                android:text="@string/username_card"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_vertical_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/tvLikeNumberDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_likenumber_detail"
                    android:text="10" />

                <TextView
                    android:id="@+id/tvSecondWordDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_likenumber_detail"
                    android:text="@string/secondword_detail"
                    android:layout_marginStart="@dimen/marginleft_scondword"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divider"
                android:background="@android:color/darker_gray"/>


            <TextView
                android:id="@+id/tvTitleImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_likenumber_detail"
                android:text="@string/titleimage"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:paddingTop="@dimen/paddintop_titleimagedetail"/>

            <TextView
                android:id="@+id/tvContentImageDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_likenumber_detail"
                android:text="@string/lorem"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/paddintop_titleimagedetail"
                android:paddingStart="@dimen/padding_horizontal_textcontentdetail"
                android:paddingEnd="@dimen/padding_horizontal_textcontentdetail"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/ablPicture"
        app:layout_anchorGravity="bottom|end"
        app:backgroundTint="@color/colorAccent"
        app:tint="@color/editTextColorWhite"
        app:srcCompat="@drawable/heart"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>